[gd_scene load_steps=17 format=2]

[ext_resource path="res://entities/Player.gd" type="Script" id=1]
[ext_resource path="res://entities/components/PlaceHolderChar3.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/state-machines/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://entities/state-machines/player/Idle.gd" type="Script" id=4]
[ext_resource path="res://entities/state-machines/player/Airborne.gd" type="Script" id=5]
[ext_resource path="res://entities/state-machines/player/Move.gd" type="Script" id=6]
[ext_resource path="res://entities/components/GroundCheckCast.tscn" type="PackedScene" id=7]
[ext_resource path="res://entities/Jump.gd" type="Script" id=8]
[ext_resource path="res://entities/Land.gd" type="Script" id=9]
[ext_resource path="res://interface/PlayerUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/ui/Fonts/PatrickHand-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/ui/button_pressed.png" type="Texture" id=12]
[ext_resource path="res://entities/components/PlaceHolderChar1.tscn" type="PackedScene" id=13]
[ext_resource path="res://entities/components/PlaceHolderChar2.tscn" type="PackedScene" id=14]


[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 6, 2 )

[sub_resource type="DynamicFont" id=22]
size = 12
font_data = ExtResource( 11 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="MovementStateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="MovementStateMachine"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="MovementStateMachine"]
script = ExtResource( 6 )

[node name="Airborne" type="Node" parent="MovementStateMachine"]
script = ExtResource( 5 )

[node name="Jump" type="Node" parent="MovementStateMachine"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="MovementStateMachine/Jump"]
wait_time = 0.2
one_shot = true

[node name="Land" type="Node" parent="MovementStateMachine"]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 21 )

[node name="GroundCheck" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -20 )
current = true
zoom = Vector2( 1.2, 1.2 )
process_mode = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 6.0
drag_margin_top = 0.4
drag_margin_bottom = 0.05

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0

[node name="ChatBubble" type="Position2D" parent="."]

[node name="Name" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 36.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 16 )
custom_fonts/font = SubResource( 22 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Name"]
modulate = Color( 0.317647, 0.317647, 0.317647, 0.862745 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 16 )
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Node2D" parent="."]

[node name="0" parent="Sprites" instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, -16 )

[node name="1" parent="Sprites" instance=ExtResource( 14 )]
visible = false
position = Vector2( 0, -16 )

[node name="2" parent="Sprites" instance=ExtResource( 13 )]
visible = false
position = Vector2( 0, -16 )
[connection signal="timeout" from="MovementStateMachine/Jump/Timer" to="MovementStateMachine/Jump" method="_on_Timer_timeout"]

[editable path="GroundCheck"]
